--- a/starter/app/src/debug/res/values/google_maps_api.xml
+++ b/starter/app/src/debug/res/values/google_maps_api.xml
@@ -1,4 +1,4 @@
 <resources>
 <!--    TODO: Before you run your application, you need a Google Maps API key.-->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD7ihyPJf1LSw1JaEK_D5SJq2Cx1IlXzV0</string>
 </resources>
